# ok-wuthering-waves

./: .gitattributes  .gitignore  .gitmodules  .update_repo_gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  FUNDING.yml  LICENSE.txt  README.md  README_cn.md  README_en.md  README_ja.md  README_zh_TW.md  compact_log.txt  config.py  deploy.txt  launcher.json  launcher.py  main.py  main.spec  main_cloud.py  main_cloud_debug.py  main_debug.py  main_debug.spec  main_debug_console.py  main_direct_ml.py  main_direct_ml_debug.py  main_dml.py  main_dml_debug.py  main_gpu.py  main_gpu_debug.py  ok  ok.yaml  ok.yml  old_NightmareNestTask.py  pyappify.yml  pyproject.toml  requirements-dev.txt  requirements-direct-ml.in  (+11 more)
.claude/: settings.json
.codestable/: attention.md
.github/: PULL_REQUEST_TEMPLATE.md
assets/: _annotations.coco.json  coco_annotations.json  coco_detection.json  path.json  result.json
pick/: map_items.db
readme/: faq.md
scripts/: download_stats.py
src/: Labels.py  OnnxYolo8Detect.py  OpenVinoYolo8Detect.py  OpenVinoYoloDetect.py  YoloDetect.py  __init__.py  globals.py  openvino_guard.py  yolo_common.py
src-win-launcher/: .gitignore  app.manifest  ok-launcher.cpp  ok-launcher.sln  ok-launcher.vcxproj  ok-launcher.vcxproj.filters  re.aps  re.rc  resource.h
test/: test_canny.py
tests/: Test521.py  TestBaseCombatTask.py  TestCD.py  TestChar.py  TestCharacterCodeTab.py  TestCombatCheck.py  TestCon.py  TestConfirm.py  TestCustomAxis.py  TestCustomCharLoader.py  TestDailyTaskLogic.py  TestDomainRecoveryLoop.py  TestEcho.py  TestEnchaneEcho.py  (+25 more)
(+211 files in other folders)
